# password-generator

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
src/: main.rs  test.rs
