[package]
name = "ideatopia-password_generator"
version = "1.0.0"
edition = "2021"
authors = ["ideatopia <https://githubcom/ideatopia>", "Judicael AHYI <https://githubcom/ludndev>"]
description = "Generates passwords with various complexities"
keywords = ["cli", "password", "generator", "security", "utility"]
license-file = "LICENSE"
repository = "https://github.com/ideatopia/ideatopia-password-generator"
documentation = "https://docs.rs/ideatopia-password-generator"
homepage = "https://crates.io/crates/ideatopia-password-generator"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
cli-clipboard = "0.4.0"
rand = "0.8.5"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26.4"

[[bin]]
name = "pwdgen"
path = "src/main.rs"
