[package]
name = "ideatopia-password_generator"
version = "1.0.5"
edition = "2021"
authors = ["ideatopia <https://githubcom/ideatopia>", "Judicael AHYI <https://githubcom/ludndev>"]
description = "Generates passwords with various complexities"
keywords = ["cli", "password", "generator", "security", "utility"]
license-file = "LICENSE"
repository = "https://github.com/ideatopia/password-generator"
documentation = "https://docs.rs/ideatopia-password-generator"
homepage = "https://crates.io/crates/ideatopia-password-generator"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
cli-clipboard = "0.4.0"
fastrand = "2.1.0"
self_update = "0.41.0"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26.4"

[lib]
#name = "ideatopia-password_generator"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "pwdgen"
path = "src/main.rs"
